Closed Bug 614560 Opened 14 years ago Closed 14 years ago

History should not try to register "resource:" uris

Categories

(Toolkit :: Places, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b9

People

(Reporter: mak, Assigned: mak)

Details

(Whiteboard: [fixed-in-places])

Attachments

(1 file)

looks like canAddURI allows them and we try to register "resource://gre-resources/hiddenWindow.html" on startup
Flags: in-testsuite?
Attached patch patch v1.0Splinter Review
one-line patch with one-line test.
Attachment #492996 - Flags: review?(dietrich)
Comment on attachment 492996 [details] [diff] [review]
patch v1.0

I cannot think of a reason to register these.
Attachment #492996 - Flags: review?(dietrich) → review+
Attachment #492996 - Flags: approval2.0+
http://hg.mozilla.org/projects/places/rev/95cca4f726cb
Flags: in-testsuite? → in-testsuite+
Whiteboard: [fixed-in-places]
Aw. I was getting used to getting resource://gre/modules/Services.jsm when typing services ;) Time to hit mxr!
http://hg.mozilla.org/mozilla-central/rev/95cca4f726cb
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: