Bug 614560 - History should not try to register "resource:" uris. r=dietrich a=dietrich